added route for getting all vending machines that belong to a company
